--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,10 @@
     "psr-4": {
       "Algorithms\\": "src/",
       "Tests\\": "tests/"
-    }
+    },
+    "files": [
+      "src/helpers.php"
+    ]
   },
   "require-dev": {
     "phpunit/phpunit": "^9.5"
